# hermes-plugin-mq9

./: .gitignore  ARCHITECTURE_A2A_MQ9.md  HERMES_ECOSYSTEM_PR_NOTE.md  README.md  README.zh-CN.md  SUBMISSION.md  __init__.py  demo_runtime_caller.py  demo_runtime_server.py  hermes_plugin_toolcall.py  plugin.yaml  pyproject.toml  run_phase4_e2e.py
conformance/: README.md  matrix.json  run_ci_gate.sh  run_conformance.py
conformance/contracts/: hermes_foundation_v1.json
examples/hermes-openclaw-fullchain/: README.md  TEST_REPORT_2026-05-15.md
examples/hermes-openclaw-fullchain/hermes/: config-a.yaml  config-b.yaml
examples/hermes-openclaw-fullchain/scripts/: verify.sh
mq9/: __init__.py  mq9_client.py  plugin.yaml  protocol_bridge.py  runtime.py  schemas.py  tools.py
openclaw-bundle/mq9-a2a-bundle/: .mcp.json  README.md
openclaw-bundle/mq9-a2a-bundle/.claude-plugin/: plugin.json
openclaw-bundle/mq9-a2a-bundle/skills/mq9-a2a/: SKILL.md
tests/: test_mq9_client_unit.py  test_protocol_bridge_unit.py  test_runtime_unit.py  test_tools_unit.py
